[package]
name = "family-derive"
version = "0.1.2"
edition = "2021"
description = "Derive macros for family"
readme = "../../README.md"
repository = "https://github.com/open-mv-sandbox/family-rs"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
quote.workspace = true
syn.workspace = true
